# drover

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: release.yml
.tally/: history.json
scripts/: publish.lash
src/: cli.rs  config.rs  lib.rs  main.rs  ollama.rs  run.rs  tools.rs
src/services/: config.rs  mod.rs
src/tools/: invocation.rs  mod.rs  parsing.rs
