[package]
name = "drover"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Prompt ollama like a unix tool- simple and scriptable."
repository = "https://github.com/what386/drover"
keywords = ["llm", "ollama", "local"]
categories = ["command-line-utilities", "artificial-intelligence"]

exclude = [
    ".github",
    ".tally",
    "scripts/",
]

[dependencies]
anyhow = "1.0.102"
globset = "0.4.18"
json = "0.12.4"
time = { version = "0.3.44", features = ["formatting"] }
toml = "1.1.2"
ureq = "2.12.1"
walkdir = "2.5.0"
